--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,7 @@ pandas==2.2.3
 pyarrow==19.0.1
 pyparsing==3.2.3
 pytz==2025.2
-pywin32==308
-seaborn==0.13.2
-tqdm==4.67.1
+pywin-308; plaform_system == "Windows"
 typeguard==4.4.2
 tzdata==2025.2
 xgboost==3.0.0
