--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+streamlit
 autocorrect==2.6.1
 chardet==5.2.0
 contourpy==1.3.1
@@ -14,3 +15,5 @@ typeguard==4.4.2
 tzdata==2025.2
 xgboost==3.0.0
 mkl-service==2.4.0
+scikit-learn
+numpy
